# mycelium-e2e-test

./: .dockerignore  .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml  pytest.ini  requirements-test.txt  run_tests.sh
.cursor/: mcp.json
data/: base_datafile.yaml  ci_datafile.yaml  empty_testbed.yaml  integration_datafile.yaml  lab_datafile.yaml  local_datafile.yaml  minimal_datafile.yaml
infra/: Dockerfile.openclaw  Dockerfile.pyats  compose.e2e.yaml
jobs/: _common.py  convergence_job.py  core_job.py  distributed_job.py  integration_job.py  minimal_job.py  sanity_job.py  weekly_e2e_job.py
libs/: __init__.py  cfn_api.py  environment.py  matrix_client.py  mycelium_api.py  mycelium_cli.py  openclaw.py
mycelium_e2e/: __init__.py  bundle.py  config.py  cross_channel_e2e.py  distributed_e2e.py  main.py  matrix_e2e.py
scripts/: analyze-wedge-correlation.py  apply-cfn-decide-timing.sh  cleanup-sessions.sh  refresh-matrix-tokens.sh  run-decide-timing-batch.sh
suites/: __init__.py  convergence_suite.py  core_suite.py  distributed_suite.py  integration_suite.py  minimal_test.py  sanity_suite.py  weekly_full_suite.py
testcases/: __init__.py  cfn_tests.py  common_setup_cleanup.py  convergence_tests.py  core_tests.py  cross_channel_tests.py  distributed_tests.py  integration_tests.py  matrix_tests.py  openclaw_tests.py
tests/: README.md  __init__.py  analyze_round_traces.py  conftest.py  examples_matrix_mcp.py  (+1 more)
tools/matrix-mcp-server/: .env.example  README.md  pyproject.toml
tools/matrix-mcp-server/src/matrix_mcp/: __main__.py  matrix_client.py  server.py
(+18 files in other folders)
