[project]
name = "mycelium-e2e"
version = "1.0.0"
description = "pyATS-based end-to-end test suite for Mycelium multi-agent coordination platform"
requires-python = ">=3.10"
dependencies = [
    "pyats[full]>=25.11,<26",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs", "testcases", "suites", "jobs"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
