[project]
name = "matrix-mcp-server"
version = "0.1.0"
description = "MCP server exposing Matrix client-server API operations for E2E test development"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matrix_mcp"]
